[package]
name = "dcc-stream"
version = "0.1.0"
edition = "2021"
description = "Poll the ARM debug communications channel over JTAG"
license = "MIT"
repository = "https://github.com/srwalter/dcc-stream"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version="4.4.6", features=["derive"]}
jtag-adi = "0.2"
jtag-taps = "0.4"
